{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "PlayerActionMap",
            "id": "f5be8aaf-ac0b-4d96-9fd5-f4d07e07a7a7",
            "actions": [
                {
                    "name": "LeftTrigger",
                    "type": "Value",
                    "id": "108e7714-ef23-43c7-88e5-c84bb640f121",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightTrigger",
                    "type": "Value",
                    "id": "fa8aa194-e77d-4715-be65-ac9a2712c163",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "48f22fe8-fa8c-4935-9786-91693d850ec0",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5f7597d9-c23c-4f19-9d2e-4a2217252800",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}